_old/compiler/src/test/resources/errors/todo/undefined_element.jd
justification undefined_element {

    evidence Su1 is "Evidence 1"
    Su1 supports Su2  // Su2 is not defined

    conclusion C is "Conclusion 1"
}
